Fix project image title position on mobile deviecs

--- a/code/styles.css
+++ b/code/styles.css
@@ -107,7 +107,7 @@ main {
 .designation {
   line-height: 67px;
   margin-top: 71px;
-  font-weight: 200;
+  font-weight: 300;
   font-size: 53px;
   z-index: 1;
   position: absolute;
@@ -116,7 +116,7 @@ main {
 
 .former {
   margin-top: 80px;
-  font-weight: 300;
+  font-weight: 400;
   z-index: 1;
   position: absolute;
   margin-top: 218px;
@@ -328,7 +328,7 @@ main {
   letter-spacing: 1px;
 }
 
-.project-image-container {
+/* .project-image-container {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -337,13 +337,28 @@ main {
   width: 327px;
   overflow: hidden;
   transition: 0.5s ease;
+  /* box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.2); 
+} */
+
+.project-image-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  max-width: 327px;
+  height: 208px;
+  width: 327px;
+  overflow: hidden;
+  transition: 0.5s ease;
+  position: relative;
   /* box-shadow: 10px 0 20px 0 rgba(0, 0, 0, 0.2); */
 }
 
 .project-image-overlay {
   position: absolute;
-  width: calc(100% - 40px);
-  height: 50%;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
   /* background-color: var(--overlay); */
   /* #bc8f8f7d */
   background-color: rgba(0, 0, 0, 0.5);
@@ -352,6 +367,9 @@ main {
 }
 
 .project-picture {
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
